--- a/index.html
+++ b/index.html
@@ -147,13 +147,18 @@
           <h2 class="section-title">Наша команда</h2>
           <ul class="list card-set">
             <li class="team__card card-item">
+              <picture>
+                <source media="(max-width: 767px)" srcset=" ./images/img/igor_mobile@1x.webp 1x , ./images/img/igor_mobile@2x.webp 2x" type="image/webp">
+                <source media="(min-width: 768px)" srcset="./images/img/igor_tablet@1x.webp 1x , ./images/img/igor_tablet@2x.webp 2x" type="image/webp">
+                <source media="(min-width: 1200px)" srcset="./images/img/igor_desktop@1x.webp 1x , ./images/img/igor_desktop@2x.webp 2x" type="image/webp">
+                <source media="(max-width: 767px)" srcset="./images/img/igor_mobile@1x.jpg 1x , ./images/img/igor_mobile@2x.jpg 2x" type="image/jpg">
+                <source media="(min-width: 768px)" srcset="./images/img/igor_tablet@1x.jpg 1x , ./images/img/igor_tablet@2x.jpg 2x" type="image/jpg">
+                <source media="(min-width: 1200px)" srcset="./images/img/igor_desktop@1x.jpg 1x , ./images/img/igor_desktop@2x.jpg 2x" type="image/jpg">
               <img
                 class="team__foto"
                 src="./images/igor.jpg"
-                alt="продукт менеджер"
-                width="270"
-                height="260"
-              />
+                alt="продукт менеджер" />
+              </picture>
               <h3 class="team__name">Ігор Дем'яненко</h3>
               <p class="team__prof">Product Designer</p>
               <ul class="list social">
@@ -212,13 +217,18 @@
               </ul>
             </li>
             <li class="team__card card-item">
-              <img
+            <picture>
+                <source media="(max-width: 767px)" srcset=" ./images/img/olga_mobile@1x.webp 1x , ./images/img/olga_mobile@2x.webp 2x" type="image/webp">
+                <source media="(min-width: 768px)" srcset="./images/img/olga_tablet@1x.webp 1x , ./images/img/olga_tablet@2x.webp 2x" type="image/webp">
+                <source media="(min-width: 1200px)" srcset="./images/img/olga_desktop@1x.webp 1x , ./images/img/olga_desktop@2x.webp 2x" type="image/webp">
+                <source media="(max-width: 767px)" srcset="./images/img/olga_mobile@1x.jpg 1x , ./images/img/olga_mobile@2x.jpg 2x" type="image/jpg">
+                <source media="(min-width: 768px)" srcset="./images/img/olga_tablet@1x.jpg 1x , ./images/img/olga_tablet@2x.jpg 2x" type="image/jpg">
+                <source media="(min-width: 1200px)" srcset="./images/img/olga_desktop@1x.jpg 1x , ./images/img/olga_desktop@2x.jpg 2x" type="image/jpg">
+                <img
                 class="team__foto"
                 src="./images/olga.jpg"
-                alt="фрондент"
-                width="270"
-                height="260"
-              />
+                alt="фрондент" />
+              </picture>
               <h3 class="team__name">Ольга Рєпіна</h3>
               <p class="team__prof">Frontend Developer</p>
               <ul class="list social">
@@ -277,13 +287,19 @@
               </ul>
             </li>
             <li class="team__card card-item">
-              <img
+              <picture>
+                <source media="(max-width: 767px)" srcset=" ./images/img/nikolai_mobile@1x.webp 1x , ./images/img/nikolai_mobile@2x.webp 2x" type="image/webp">
+                <source media="(min-width: 768px)" srcset="./images/img/nikolai_tablet@1x.webp 1x , ./images/img/nikolai_tablet@2x.webp 2x" type="image/webp">
+                <source media="(min-width: 1200px)" srcset="./images/img/nikolai_desktop@1x.webp 1x , ./images/img/nikolai_desktop@2x.webp 2x" type="image/webp">
+                <source media="(max-width: 767px)" srcset="./images/img/nikolai_mobile@1x.jpg 1x , ./images/img/nikolai_mobile@2x.jpg 2x" type="image/jpg">
+                <source media="(min-width: 768px)" srcset="./images/img/nikolai_tablet@1x.jpg 1x , ./images/img/nikolai_tablet@2x.jpg 2x" type="image/jpg">
+                <source media="(min-width: 1200px)" srcset="./images/img/nikolai_desktop@1x.jpg 1x , ./images/img/nikolai_desktop@2x.jpg 2x" type="image/jpg">
+             <img
                 class="team__foto"
                 src="./images/mukola.jpg"
                 alt="маркейтінг"
-                width="270"
-                height="260"
               />
+              </picture>
               <h3 class="team__name">Микола Тарасов</h3>
               <p class="team__prof">Marketing</p>
               <ul class="list social">
