--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,15 @@
             <li class="card-item">
               <a class="link portfolio__link" href="">
                 <div class="overlay">
-                  <img src="./images/tehtnokrack.jpg" alt="Ноут" width="370" height="294" />
+                  <picture>
+                    <source media="(max-width: 767px)" srcset="./images/portfolio/technokryak_mobile@1x.webp 1x ,./images/portfolio/technokryak_mobile@2x.webp 2x" type="image/webp" />
+                    <source media="(min-width: 768px)" srcset="./images/portfolio/technokryak_tablet@1x.webp 1x , ./images/portfolio/technokryak_tablet@2x.webp 2x" type="image/webp" />
+                    <source media="(min-width: 1200px)" srcset="./images/portfolio/technokryak_desktop@1x.webp 1x , ./images/portfolio/technokryak_desktop@2x.webp 2x" type="image/webp" />
+                    <source media="(max-width: 767px)" srcset="./images/portfolio/technokryak_mobile@1x.jpg 1x , ./images/portfolio/technokryak_mobile@2x.jpg 2x" type="image/jpg" />
+                    <source media="(min-width: 768px)" srcset="./images/portfolio/technokryak_tablet@1x.jpg 1x , ./images/portfolio/technokryak_tablet@2x.jpg 2x" type="image/jpg" />
+                    <source media="(min-width: 1200px)" srcset="./images/portfolio/technokryak_desktop@1x.jpg 1x ./images/portfolio/technokryak_desktop@2x.jpg 2x" type="image/jpg" />
+                    <img src="./images/tehtnokrack.jpg" alt="Ноут" />
+                  </picture>
                   <p class="overlay-text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
@@ -82,7 +90,15 @@
             <li class="card-item">
               <a class="link portfolio__link" href=""
                 ><div class="overlay">
-                  <img src="./images/NewOrlean.jpg" alt="Постер" width="370" height="294" />
+                  <picture>
+                    <source media="(max-width: 767px)" srcset="./images/portfolio/poster_mobile@1x.webp 1x ,./images/portfolio/poster_mobile@2x.webp 2x" type="image/webp" />
+                    <source media="(min-width: 768px)" srcset="./images/portfolio/poster_tablet@1x.webp 1x , ./images/portfolio/poster_tablet@2x.webp 2x" type="image/webp" />
+                    <source media="(min-width: 1200px)" srcset="./images/portfolio/poster_desktop@1x.webp 1x , ./images/portfolio/poster_desktop@2x.webp 2x" type="image/webp" />
+                    <source media="(max-width: 767px)" srcset="./images/portfolio/poster_mobile@1x.jpg 1x , ./images/portfolio/poster_mobile@2x.jpg 2x" type="image/jpg" />
+                    <source media="(min-width: 768px)" srcset="./images/portfolio/poster_tablet@1x.jpg 1x , ./images/portfolio/poster_tablet@2x.jpg 2x" type="image/jpg" />
+                    <source media="(min-width: 1200px)" srcset="./images/portfolio/poster_desktop@1x.jpg 1x ./images/portfolio/poster_desktop@2x.jpg 2x" type="image/jpg" />
+                    <img src="./images/NewOrlean.jpg" alt="Постер" />
+                  </picture>
                   <p class="overlay-text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
@@ -98,8 +114,16 @@
             <li class="card-item">
               <a class="link portfolio__link" href=""
                 ><div class="overlay">
-                  <img src="./images/Seafood.jpg" alt="Ресторан" width="370" height="294" />
-                  <p class="overlay-text">
+                  <picture>
+                    <source media="(max-width: 767px)" srcset="./images/portfolio/restaurant_mobile@1x.webp 1x ,./images/portfolio/restaurant_mobile@2x.webp 2x" type="image/webp" />
+                    <source media="(min-width: 768px)" srcset="./images/portfolio/restaurant_tablet@1x.webp 1x , ./images/portfolio/restaurant_tablet@2x.webp 2x" type="image/webp" />
+                    <source media="(min-width: 1200px)" srcset="./images/portfolio/restaurant_desktop@1x.webp 1x , ./images/portfolio/restaurant_desktop@2x.webp 2x" type="image/webp" />
+                    <source media="(max-width: 767px)" srcset="./images/portfolio/restaurant_mobile@1x.jpg 1x , ./images/portfolio/restaurant_mobile@2x.jpg 2x" type="image/jpg" />
+                    <source media="(min-width: 768px)" srcset="./images/portfolio/restaurant_tablet@1x.jpg 1x , ./images/portfolio/restaurant_tablet@2x.jpg 2x" type="image/jpg" />
+                    <source media="(min-width: 1200px)" srcset="./images/portfolio/restaurant_desktop@1x.jpg 1x ./images/portfolio/restaurant_desktop@2x.jpg 2x" type="image/jpg" />
+                   <img src="./images/Seafood.jpg" alt="Ресторан" />
+                  </picture>
+                <p class="overlay-text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                     приватну особу.
@@ -114,7 +138,15 @@
             <li class="card-item">
               <a class="link portfolio__link" href=""
                 ><div class="overlay">
-                  <img src="./images/Prime.jpg" alt="Навушники" width="370" height="294" />
+                  <picture>
+                    <source media="(max-width: 767px)" srcset="./images/portfolio/prime_mobile@1x.webp 1x ,./images/portfolio/prime_mobile@2x.webp 2x" type="image/webp" />
+                    <source media="(min-width: 768px)" srcset="./images/portfolio/prime_tablet@1x.webp 1x , ./images/portfolio/prime_tablet@2x.webp 2x" type="image/webp" />
+                    <source media="(min-width: 1200px)" srcset="./images/portfolio/prime_desktop@1x.webp 1x , ./images/portfolio/prime_desktop@2x.webp 2x" type="image/webp" />
+                    <source media="(max-width: 767px)" srcset="./images/portfolio/prime_mobile@1x.jpg 1x , ./images/portfolio/prime_mobile@2x.jpg 2x" type="image/jpg" />
+                    <source media="(min-width: 768px)" srcset="./images/portfolio/prime_tablet@1x.jpg 1x , ./images/portfolio/prime_tablet@2x.jpg 2x" type="image/jpg" />
+                    <source media="(min-width: 1200px)" srcset="./images/portfolio/prime_desktop@1x.jpg 1x ./images/portfolio/prime_desktop@2x.jpg 2x" type="image/jpg" />
+                   <img src="./images/Prime.jpg" alt="Навушники" />
+                  </picture>
                   <p class="overlay-text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
@@ -130,7 +162,15 @@
             <li class="card-item">
               <a class="link portfolio__link" href=""
                 ><div class="overlay">
-                  <img src="./images/Boxes.jpg" alt="Коробка" width="370" height="294" />
+                  <picture>
+                    <source media="(max-width: 767px)" srcset="./images/portfolio/boxes_mobile@1x.webp 1x ,./images/portfolio/boxes_mobile@2x.webp 2x" type="image/webp" />
+                    <source media="(min-width: 768px)" srcset="./images/portfolio/boxes_tablet@1x.webp 1x , ./images/portfolio/boxes_tablet@2x.webp 2x" type="image/webp" />
+                    <source media="(min-width: 1200px)" srcset="./images/portfolio/boxes_desktop@1x.webp 1x , ./images/portfolio/boxes_desktop@2x.webp 2x" type="image/webp" />
+                    <source media="(max-width: 767px)" srcset="./images/portfolio/boxes_mobile@1x.jpg 1x , ./images/portfolio/boxes_mobile@2x.jpg 2x" type="image/jpg" />
+                    <source media="(min-width: 768px)" srcset="./images/portfolio/boxes_tablet@1x.jpg 1x , ./images/portfolio/boxes_tablet@2x.jpg 2x" type="image/jpg" />
+                    <source media="(min-width: 1200px)" srcset="./images/portfolio/boxes_desktop@1x.jpg 1x ./images/portfolio/boxes_desktop@2x.jpg 2x" type="image/jpg" />
+                   <img src="./images/Boxes.jpg" alt="Коробка" />
+                  </picture>
                   <p class="overlay-text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
@@ -146,7 +186,15 @@
             <li class="card-item">
               <a class="link portfolio__link" href=""
                 ><div class="overlay">
-                  <img src="./images/Bordersimg.jpg" alt="ПК" width="370" height="294" />
+                  <picture>
+                    <source media="(max-width: 767px)" srcset="./images/portfolio/inspiration_mobile@1x.webp 1x ,./images/portfolio/inspiration_mobile@2x.webp 2x" type="image/webp" />
+                    <source media="(min-width: 768px)" srcset="./images/portfolio/inspiration_tablet@1x.webp 1x , ./images/portfolio/inspiration_tablet@2x.webp 2x" type="image/webp" />
+                    <source media="(min-width: 1200px)" srcset="./images/portfolio/inspiration_desktop@1x.webp 1x , ./images/portfolio/inspiration_desktop@2x.webp 2x" type="image/webp" />
+                    <source media="(max-width: 767px)" srcset="./images/portfolio/inspiration_mobile@1x.jpg 1x , ./images/portfolio/inspiration_mobile@2x.jpg 2x" type="image/jpg" />
+                    <source media="(min-width: 768px)" srcset="./images/portfolio/inspiration_tablet@1x.jpg 1x , ./images/portfolio/inspiration_tablet@2x.jpg 2x" type="image/jpg" />
+                    <source media="(min-width: 1200px)" srcset="./images/portfolio/inspiration_desktop@1x.jpg 1x ./images/portfolio/inspiration_desktop@2x.jpg 2x" type="image/jpg" />
+                  <img src="./images/Bordersimg.jpg" alt="ПК" />
+                  </picture>
                   <p class="overlay-text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
@@ -162,7 +210,15 @@
             <li class="card-item">
               <a class="link portfolio__link" href=""
                 ><div class="overlay">
-                  <img src="./images/LimitedEdition.jpg" alt="Книга" width="370" height="294" />
+                  <picture>
+                    <source media="(max-width: 767px)" srcset="./images/portfolio/limited_mobile@1x.webp 1x ,./images/portfolio/limited_mobile@2x.webp 2x" type="image/webp" />
+                    <source media="(min-width: 768px)" srcset="./images/portfolio/limited_tablet@1x.webp 1x , ./images/portfolio/limited_tablet@2x.webp 2x" type="image/webp" />
+                    <source media="(min-width: 1200px)" srcset="./images/portfolio/limited_desktop@1x.webp 1x , ./images/portfolio/limited_desktop@2x.webp 2x" type="image/webp" />
+                    <source media="(max-width: 767px)" srcset="./images/portfolio/limited_mobile@1x.jpg 1x , ./images/portfolio/limited_mobile@2x.jpg 2x" type="image/jpg" />
+                    <source media="(min-width: 768px)" srcset="./images/portfolio/limited_tablet@1x.jpg 1x , ./images/portfolio/limited_tablet@2x.jpg 2x" type="image/jpg" />
+                    <source media="(min-width: 1200px)" srcset="./images/portfolio/limited_desktop@1x.jpg 1x ./images/portfolio/limited_desktop@2x.jpg 2x" type="image/jpg" />
+                    <img src="./images/LimitedEdition.jpg" alt="Книга" />
+                  </picture>
                   <p class="overlay-text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
@@ -178,7 +234,15 @@
             <li class="card-item">
               <a class="link portfolio__link" href=""
                 ><div class="overlay">
-                  <img src="./images/LAB.jpg" alt="LAB" width="370" height="294" />
+                  <picture>
+                    <source media="(max-width: 767px)" srcset="./images/portfolio/lab_mobile@1x.webp 1x ,./images/portfolio/lab_mobile@2x.webp 2x" type="image/webp" />
+                    <source media="(min-width: 768px)" srcset="./images/portfolio/lab_tablet@1x.webp 1x , ./images/portfolio/lab_tablet@2x.webp 2x" type="image/webp" />
+                    <source media="(min-width: 1200px)" srcset="./images/portfolio/lab_desktop@1x.webp 1x , ./images/portfolio/lab_desktop@2x.webp 2x" type="image/webp" />
+                    <source media="(max-width: 767px)" srcset="./images/portfolio/lab_mobile@1x.jpg 1x , ./images/portfolio/lab_mobile@2x.jpg 2x" type="image/jpg" />
+                    <source media="(min-width: 768px)" srcset="./images/portfolio/lab_tablet@1x.jpg 1x , ./images/portfolio/lab_tablet@2x.jpg 2x" type="image/jpg" />
+                    <source media="(min-width: 1200px)" srcset="./images/portfolio/lab_desktop@1x.jpg 1x ./images/portfolio/lab_desktop@2x.jpg 2x" type="image/jpg" />
+                   <img src="./images/LAB.jpg" alt="LAB" />
+                  </picture>
                   <p class="overlay-text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
@@ -194,8 +258,16 @@
             <li class="card-item">
               <a class="link portfolio_link" href=""
                 ><div class="overlay">
-                  <img src="./images/GrowingBusiness.jpg" alt="Ноут" width="370" height="294" />
-                  <p class="overlay-text">
+                  <picture>
+                    <source media="(max-width: 767px)" srcset="./images/portfolio/growing_mobile@1x.webp 1x ,./images/portfolio/growing_mobile@2x.webp 2x" type="image/webp" />
+                    <source media="(min-width: 768px)" srcset="./images/portfolio/growing_tablet@1x.webp 1x , ./images/portfolio/growing_tablet@2x.webp 2x" type="image/webp" />
+                    <source media="(min-width: 1200px)" srcset="./images/portfolio/growing_desktop@1x.webp 1x , ./images/portfolio/growing_desktop@2x.webp 2x" type="image/webp" />
+                    <source media="(max-width: 767px)" srcset="./images/portfolio/growing_mobile@1x.jpg 1x , ./images/portfolio/growing_mobile@2x.jpg 2x" type="image/jpg" />
+                    <source media="(min-width: 768px)" srcset="./images/portfolio/growing_tablet@1x.jpg 1x , ./images/portfolio/growing_tablet@2x.jpg 2x" type="image/jpg" />
+                    <source media="(min-width: 1200px)" srcset="./images/portfolio/growing_desktop@1x.jpg 1x ./images/portfolio/growing_desktop@2x.jpg 2x" type="image/jpg" />
+                   <img src="./images/GrowingBusiness.jpg" alt="Ноут" />
+                  </picture>
+                   <p class="overlay-text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                     приватну особу.
