--- a/index.html
+++ b/index.html
@@ -358,13 +358,18 @@
               </ul>
             </li>
             <li class="team__card card-item">
-              <img
+              <picture>
+                <source media="(max-width: 767px)" srcset=" ./images/img/mihail_mobile@1x.webp 1x , ./images/img/mihail_mobile@2x.webp 2x" type="image/webp">
+                <source media="(min-width: 768px)" srcset=" ./images/img/mihail_tablet@1x.webp 1x , ./images/img/mihaili_tablet@2x.webp 2x" type="image/webp">
+                <source media="(min-width: 1200px)" srcset=" ./images/img/mihail_desktop@1x.webp 1x , ./images/img/mihail_desktop@2x.webp 2x" type="image/webp">
+                <source media="(max-width: 767px)" srcset=" ./images/img/mihail_mobile@1x.jpg 1x , ./images/img/mihail_mobile@2x.jpg 2x" type="image/jpg">
+                <source media="(min-width: 768px)" srcset=" ./images/img/mihail_tablet@1x.jpg 1x , ./images/img/mihail_tablet@2x.jpg 2x" type="image/jpg">
+                <source media="(min-width: 1200px)" srcset=" ./images/img/mihail_desktop@1x.jpg 1x , ./images/img/mihail_desktop@2x.jpg 2x" type="image/jpg">
+           <img
                 class="team__foto"
                 src="./images/muha.jpg"
-                alt="дизайнер"
-                width="270"
-                height="260"
-              />
+                alt="дизайнер" />
+              </picture>
               <h3 class="team__name">Михайло Єрмаков</h3>
               <p class="team__prof">UI Designer</p>
               <ul class="list social">
