--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/main.min.css" />
-    <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
     <title>Portfolio</title>
   </head>
   <body class="body">
@@ -52,7 +51,7 @@
     </header>
     <main>
       <!-- Портфоліо -->
-      <section class="section">
+      <!-- <section class="section">
         <div class="container">
           <h1 class="visually-hidden">Портфоліо</h1>
           <ul class="list portfolio__filter">
@@ -377,6 +376,6 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
