--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="mobile-menu" id="menu__controls" data-menu>
           <ul class="mobile__nav-list">
             <li class="mobile__nav-item">
-              <a class="mobile__nav-link current" href="./index.html">Студія</a>
+              <a class="mobile__nav-link" href="./index.html">Студія</a>
             </li>
             <li class="mobile__nav-item">
               <a class="mobile__nav-link" href="./portfolio.html">Портфоліо</a>
