--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
     </header>
     <main>
       <!-- Hero -->
-      <!-- <section class="hero">
+      <section class="hero">
         <div class="container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button class="btn hero-btn" type="button" data-modal-open>Замовити послугу</button>
         </div>
-      </section> -->
+      </section>
       <!-- Контент -->
       <!-- <section class="section">
         <div class="container">
