--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
       </div>
     </footer> -->
     <!-- Modal window -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-btn" type="button" data-modal-close>
           <svg class="modal-icon" width="11" height="11">
@@ -689,7 +689,7 @@
         </label>
         <button class="btn hero-btn" type="submit">Відправити</button>
       </div>
-    </div> -->
+    </div>
     <script src="./js/menu.js"></script>
     <script src="./js/modal.js"></script>
     </body>
