--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
       <section class="section">
         <div class="container">
           <h2 class="section-title">Постійні клієнти</h2>
-          <ul class="list card-set">
+          <ul class="list list_card-set">
             <li class="card-item">
               <a class="link client__link" href="" aria-label="logo">
                 <svg class="client__icon" width="106" height="60">
