--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
     </header>
     <main>
       <!-- Hero -->
-      <section class="hero">
-        <div class="container">
+      <section class="hero container">
+        <div>
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button class="btn hero-btn" type="button" data-modal-open>Замовити послугу</button>
         </div>
